# virea

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
apps/viewer-web/: app.js  index.html  styles.css  vrm-canonical-alignment.js  vrm-viewer.js
configs/: project.yaml
configs/pipelines/: preview.yaml
demo/: README.md  conversion-report.json
doc/: README.zh-CN.md  data-pipeline.zh-CN.md  engineering-design.zh-CN.md  pipeline.zh-CN.md  references.zh-CN.md  susu-pipeline-audit.zh-CN.md  theory.zh-CN.md
doc/math-retarget/: README.zh-CN.md  bvh-to-vrm.zh-CN.md  humanml3d-263d-to-vrm.zh-CN.md  review-checklist.zh-CN.md  smplh-to-vrm.zh-CN.md  smplx-to-vrm.zh-CN.md  susu-to-vrm.zh-CN.md  vrm-gltf-target.zh-CN.md
doc/showcase/: README.md  showcase-samples.json
doc/showcase/videos/: 01_amass_accad_female1running_c3d_c7_run_backwards_stageii.webm  01_babel_accad_female1running_c3d_c7_run_backwards_stageii.webm  01_beat_pose_1_1_wayne_0_28_28.webm  01_grab_s1_bowl_drink_1.webm  01_humanml3d_test_test_00000_of_00002_2.webm  02_amass_accad_female1running_c3d_c26_run_to_crouch_stageii.webm  (+43 more)
registries/: citations.yaml  datasets.yaml  licenses.yaml  skeletons.yaml
schemas/: dataset_manifest.schema.json  motion_sample.schema.json  quality_report.schema.json
scripts/: download_demo.py  render_showcase.mjs  select_showcase_samples.py  smoke_pipeline.py
src/virea/: __init__.py  __main__.py  cli.py  demo.py  paths.py  verification.py
tests/: test_alignment_quality.py  test_batch_pipeline.py  test_preview_pipelines.py  test_source_extractor.py
(+34 files in other folders)
