[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "virea"
version = "0.1.0"
description = "VRM-native motion data infrastructure and preview pipelines."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "numpy>=1.26",
  "pandas>=2.0",
  "pyarrow>=15.0",
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
virea = "virea.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
